made a rough fix for the dropotron, navbar on mobile works now

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3378,7 +3378,7 @@ float:center;
 	opacity: 0.7;
 	border:none;
 }
-
+/*this is the code for the base navbar */
 #menu {
 	float: right;
 }
@@ -3911,7 +3911,102 @@ float:center;
 						top: 0;
 						width: 54px;
 					}
+/*this is the code for the navpanel in mobile */
+/*this is my modified code for my modified navbar*/
+#navigationPanel {
+	-moz-backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+	-ms-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-transform: translateX(-275px);
+	-webkit-transform: translateX(-275px);
+	-ms-transform: translateX(-275px);
+	transform: translateX(-275px);
+	-moz-transition: -moz-transform 0.5s ease;
+	-webkit-transition: -webkit-transform 0.5s ease;
+	-ms-transition: -ms-transform 0.5s ease;
+	transition: transform 0.5s ease;
+	display: block;
+	height: 100%;
+	left: 0;
+	overflow-y: auto;
+	position: fixed;
+	top: 0;
+	width: 275px;
+	z-index: 10002;
+	background: #181920;
+	padding: 0.75em 1.25em;
+}
 
+	#navigationPanel .link {
+		border: 0;
+		border-top: solid 1px rgba(255, 255, 255, 0.05);
+		color: rgba(255, 255, 255, 0.75);
+		display: block;
+		height: 3em;
+		line-height: 3em;
+		text-decoration: none;
+	}
+
+		#navigationPanel .link:hover {
+			color: inherit !important;
+		}
+
+		#navigationPanel .link:first-child {
+			border-top: 0;
+		}
+
+		#navigationPanel .link.depth-0 {
+			color: #ffffff;
+			font-weight: 300;
+		}
+
+		#navigationPanel .link .indent-1 {
+			display: inline-block;
+			width: 1.25em;
+		}
+
+		#navigationPanel .link .indent-2 {
+			display: inline-block;
+			width: 2.5em;
+		}
+
+		#navigationPanel .link .indent-3 {
+			display: inline-block;
+			width: 3.75em;
+		}
+
+		#navigationPanel .link .indent-4 {
+			display: inline-block;
+			width: 5em;
+		}
+
+		#navigationPanel .link .indent-5 {
+			display: inline-block;
+			width: 6.25em;
+		}
+
+body.navigationPanel-visible #page-wrapper {
+	-moz-transform: translateX(275px);
+	-webkit-transform: translateX(275px);
+	-ms-transform: translateX(275px);
+	transform: translateX(275px);
+}
+
+body.navigationPanel-visible #titleBar {
+	-moz-transform: translateX(275px);
+	-webkit-transform: translateX(275px);
+	-ms-transform: translateX(275px);
+	transform: translateX(275px);
+}
+
+body.navigationPanel-visible #navigationPanel {
+	-moz-transform: translateX(0);
+	-webkit-transform: translateX(0);
+	-ms-transform: translateX(0);
+	transform: translateX(0);
+}
+/*this is the original code segment*/
 			#navPanel {
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
